# practicing_async

./: Cargo.toml  README.md
examples/: connection.rs  cpu_number.rs  fizzbuzz.rs  glade_test.rs  glade_test2.rs  glade_test3.rs  two_channels.rs
src/: glade_test.rs  lib.rs
src/glade_test/: attempt.glade~  glade_test.rs  tutorial2.glade  tutorial2.glade~
