[package]
name = "practicing_async"
version = "0.0.1"
license = "MIT"
authors = ["On0n0k1 <stiltztinkerstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["full"] }
tokio-stream = "0.1.4"
num_cpus = "1.13.0"
bytes = "1"
